@@ -7,7 +7,6 @@ import com.ford.syncV4.android.MainApp;
 import com.ford.syncV4.android.constants.Const;
 import com.ford.syncV4.proxy.constants.ProtocolConstants;
 import com.ford.syncV4.transport.TransportType;
-import com.stericson.RootTools.RootTools;
 
 /**
  * Created with Android Studio.
@@ -38,7 +37,7 @@ public class AppPreferencesManager {
         SharedPreferences sharedPreferences = getAppContext().getSharedPreferences(Const.PREFS_NAME, 0);
         SharedPreferences.Editor editor = sharedPreferences.edit();
         editor.putInt(Const.Transport.PREFS_KEY_TRANSPORT_TYPE, transportTypeIntValue);
-        editor.commit();
+        editor.apply();
     }
 
     /**
@@ -69,7 +68,7 @@ public class AppPreferencesManager {
         SharedPreferences sharedPreferences = getAppContext().getSharedPreferences(Const.PREFS_NAME, 0);
         SharedPreferences.Editor editor = sharedPreferences.edit();
         editor.putString(Const.Policy.PREF_KEY_POLICY_UPDATE_FILE_PATH, filePath);
-        editor.commit();
+        editor.apply();
     }
 
     /**
@@ -91,7 +90,7 @@ public class AppPreferencesManager {
         SharedPreferences sharedPreferences = getAppContext().getSharedPreferences(Const.PREFS_NAME, 0);
         SharedPreferences.Editor editor = sharedPreferences.edit();
         editor.putBoolean(Const.Policy.PREF_KEY_POLICY_UPDATE_AUTO_REPLAY, value);
-        editor.commit();
+        editor.apply();
     }
 
     /**
@@ -113,7 +112,7 @@ public class AppPreferencesManager {
         SharedPreferences sharedPreferences = getAppContext().getSharedPreferences(Const.PREFS_NAME, 0);
         SharedPreferences.Editor editor = sharedPreferences.edit();
         editor.putBoolean(Const.HashId.PREF_KEY_USE_HASH_ID, value);
-        editor.commit();
+        editor.apply();
     }
 
     /**
@@ -135,7 +134,7 @@ public class AppPreferencesManager {
         SharedPreferences sharedPreferences = getAppContext().getSharedPreferences(Const.PREFS_NAME, 0);
         SharedPreferences.Editor editor = sharedPreferences.edit();
         editor.putBoolean(Const.HashId.PREF_KEY_USE_CUSTOM_HASH_ID, value);
-        editor.commit();
+        editor.apply();
     }
 
     /**
@@ -158,7 +157,7 @@ public class AppPreferencesManager {
         SharedPreferences sharedPreferences = getAppContext().getSharedPreferences(Const.PREFS_NAME, 0);
         SharedPreferences.Editor editor = sharedPreferences.edit();
         editor.putString(Const.HashId.PREF_KEY_CUSTOM_HASH_ID, value);
-        editor.commit();
+        editor.apply();
     }
 
     /**
@@ -179,7 +178,7 @@ public class AppPreferencesManager {
         SharedPreferences sharedPreferences = getAppContext().getSharedPreferences(Const.PREFS_NAME, 0);
         SharedPreferences.Editor editor = sharedPreferences.edit();
         editor.putString(Const.HashId.PREF_KEY_LAST_HASH_IDS, value);
-        editor.commit();
+        editor.apply();
     }
 
     /**
@@ -206,7 +205,7 @@ public class AppPreferencesManager {
         SharedPreferences sharedPreferences = getAppContext().getSharedPreferences(Const.PREFS_NAME, 0);
         SharedPreferences.Editor editor = sharedPreferences.edit();
         editor.putBoolean(Const.PREF_KEY_IS_CUSTOM_APP_ID, value);
-        editor.commit();
+        editor.apply();
     }
 
     /**
@@ -222,7 +221,7 @@ public class AppPreferencesManager {
         SharedPreferences sharedPreferences = getAppContext().getSharedPreferences(Const.PREFS_NAME, 0);
         SharedPreferences.Editor editor = sharedPreferences.edit();
         editor.putString(Const.PREF_KEY_CUSTOM_APP_ID, value);
-        editor.commit();
+        editor.apply();
     }
 
     /**
@@ -231,6 +230,26 @@ public class AppPreferencesManager {
     public static String getCustomAppId() {
         SharedPreferences sharedPreferences = getAppContext().getSharedPreferences(Const.PREFS_NAME, 0);
         return sharedPreferences.getString(Const.PREF_KEY_CUSTOM_APP_ID, "");
+    }
+
+    /**
+     * Set flag that indicates whether to start Session as secured
+     *
+     * @param value boolean value
+     */
+    public static void setIsStartSecureSession(boolean value) {
+        SharedPreferences sharedPreferences = getAppContext().getSharedPreferences(Const.PREFS_NAME, 0);
+        SharedPreferences.Editor editor = sharedPreferences.edit();
+        editor.putBoolean(Const.PREF_KEY_START_SECURE_SESSION, value);
+        editor.apply();
+    }
+
+    /**
+     * @return flag that indicates whether to start Session as secured
+     */
+    public static boolean getIsStartSecureSession() {
+        SharedPreferences sharedPreferences = getAppContext().getSharedPreferences(Const.PREFS_NAME, 0);
+        return sharedPreferences.getBoolean(Const.PREF_KEY_START_SECURE_SESSION, false);
     }
 
     /**
@@ -257,7 +276,7 @@ public class AppPreferencesManager {
         disableLock = !disableLock;
         SharedPreferences.Editor editor = sharedPreferences.edit();
         editor.putBoolean(Const.PREFS_KEY_DISABLE_LOCK_WHEN_TESTING, disableLock);
-        editor.commit();
+        editor.apply();
     }
 
     /**
@@ -276,7 +295,7 @@ public class AppPreferencesManager {
         SharedPreferences sharedPreferences = getAppContext().getSharedPreferences(Const.PREFS_NAME, 0);
         SharedPreferences.Editor editor = sharedPreferences.edit();
         editor.putInt(Const.PREFS_KEY_PROTOCOL_MIN_VERSION, value);
-        editor.commit();
+        editor.apply();
     }
 
     /**
@@ -287,7 +306,7 @@ public class AppPreferencesManager {
         SharedPreferences sharedPreferences = getAppContext().getSharedPreferences(Const.PREFS_NAME, 0);
         SharedPreferences.Editor editor = sharedPreferences.edit();
         editor.putBoolean(Const.PREF_KEY_DO_DEVICE_ROOT_CHECK, value);
-        editor.commit();
+        editor.apply();
     }
 
     /**
@@ -306,7 +325,7 @@ public class AppPreferencesManager {
         SharedPreferences sharedPreferences = getAppContext().getSharedPreferences(Const.PREFS_NAME, 0);
         SharedPreferences.Editor editor = sharedPreferences.edit();
         editor.putInt(Const.PREFS_KEY_PROTOCOL_MAX_VERSION, value);
-        editor.commit();
+        editor.apply();
     }
 
     /**
